--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
+# CMake's installation directory
+install/
+
 # Custom Settings
 CMakeLists2.txt
 
 # Build
 bin/
 build/
+Testing/
+
+# CMake #
+/cmake-build-debug
+/cmake-build-release
+/cmake-superbuild-debug
+/cmake-superbuild-release
 
 # Build: Python
 *.pyc
@@ -12,6 +22,11 @@ build/
 # Doxygen
 docs/html
 *.tmp
+
+# CLion #
+#################
+/.idea/*
+!/.idea/runConfigurations
 
 # Visual Studio
 .vs/
